--- a/Trabajo_pagina_web/Inicio.html
+++ b/Trabajo_pagina_web/Inicio.html
@@ -7,6 +7,11 @@
     <title>La pagina web atter</title>
     <!-- FONT AWESOME-->
     <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css />
+    <link rel="stylesheet" href="inicio.css">
+    <!-- FONT OSWALD -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
