--- a/Trabajo_pagina_web/Formulario.html
+++ b/Trabajo_pagina_web/Formulario.html
@@ -22,6 +22,7 @@
                 <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
                 <input type="password" required>
                 <label for="">Password</label>
+            
             </div>
             <div class="remenber-forgot">
                 <label for=""><input type="checkbox">Remember me</label>
@@ -29,7 +30,7 @@
             </div>
             <button type="submit">Login</button>
             <div class="register-link">
-                <p>Don`t have an account? <a href="#">Register</a></p>
+                <p>Don`t have an account? <a href="Resgister.html">Register</a></p>
             </div>
         </form>
     </div>
