creando mi contenido dentro con imagenes de fondo tematica naturaleza acomodando y poniendo estilo

--- a/Trabajo_pagina_web/Inicio.html
+++ b/Trabajo_pagina_web/Inicio.html
@@ -16,8 +16,8 @@
 <body>
     <div class="container">
         <nav class="nav_main">
-           <img src="Img/Fotito_1.jpg" alt="Mi fotito">
-        <ul class="menu">
+           <img src="Img/Fotito_1.jpg" alt="Mi fotito" class="nav-brand">
+        <ul class="nav-menu">
             <li>
                 <a href="#">Inicio</a>
             </li>
@@ -45,6 +45,46 @@
             </li>  
         </ul>
         </nav>
+        <br>
+        <hr>
+       
+        <!-- imagen principal del sitio-->
+
+        <header class="showcase">
+            <h2>Atter Mayer Basilio Rengifo</h2>
+            <p>Hola, soy un chico tranquilo de b Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, aspernatur aliquam, recusandae impedit soluta minima harum quas a nemo voluptatum suscipit delectus beatae distinctio voluptatem nulla dicta, doloribus nostrum id!</p>
+            <a href="#" class="btn" >Leer mas <i class="fas fa-angle-double-right" ></i> </a>
+        </header>
+
+        <div class="news-cards">
+            <div>
+                <img src="Img/fondo1.jpg" alt="">
+                <h3>Lorem ipsum dolor </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis possimus minima porro quas libero veniam molestias doloribus quaerat maxime non! Reprehenderit et pariatur, culpa nam maxime consequatur. Magni, eaque veritatis?</p>
+                <a href="#">Aprende mas <i class="fas fa-angle-double-right" ></i> </a>
+            </div>
+            <div>
+                <img src="Img/fondo2.jpg" alt="">
+                <h3>Lorem ipsum dolor </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis possimus minima porro quas libero veniam molestias doloribus quaerat maxime non! Reprehenderit et pariatur, culpa nam maxime consequatur. Magni, eaque veritatis?</p>
+                <a href="#">Aprende mas <i class="fas fa-angle-double-right" ></i> </a>
+            </div>
+            <div>
+                <img src="Img/fondo3.jpg" alt="">
+                <h3>Lorem ipsum dolor </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis possimus minima porro quas libero veniam molestias doloribus quaerat maxime non! Reprehenderit et pariatur, culpa nam maxime consequatur. Magni, eaque veritatis?</p>
+                <a href="#">Aprende mas <i class="fas fa-angle-double-right" ></i> </a>
+            </div>
+            <div>
+                <img src="Img/fondo4.jpg" alt="">
+                <h3>Lorem ipsum dolor </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis possimus minima porro quas libero veniam molestias doloribus quaerat maxime non! Reprehenderit et pariatur, culpa nam maxime consequatur. Magni, eaque veritatis?</p>
+                <a href="#">Aprende mas <i class="fas fa-angle-double-right" ></i> </a>
+            </div>
+
+        </div>
+
+
 
     </div>
     
