Agregando redes sociales a la pagina

--- a/Trabajo_pagina_web/Inicio.html
+++ b/Trabajo_pagina_web/Inicio.html
@@ -84,8 +84,30 @@
 
         </div>
 
+         <section class="cards-banner-one">
+            <div class="content">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quisquam provident fugit eos nihil, doloremque incidunt excepturi rerum! Blanditiis necessitatibus dicta laborum libero corrupti facere distinctio nesciunt natus dignissimos.</p>
+                <a href="#" class="btn">lee mas <i class="fas fa-angle-double-right" ></i> </a> 
 
+            </div>
+        </section>
 
+        <section class="social" >
+            <p>Follow techNews</p>
+            <div class="links">
+                <a href="#">
+                    <i class="fab fa-facebook-f" ></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-twitter" ></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-linkedin" ></i>
+                </a>
+            </div>
+        </section>
+ 
     </div>
     
 </body>
