Poniendo mas estilos a mis redes sociales y agregando google maps

--- a/Trabajo_pagina_web/Inicio.html
+++ b/Trabajo_pagina_web/Inicio.html
@@ -105,10 +105,121 @@
                 <a href="#">
                     <i class="fab fa-linkedin" ></i>
                 </a>
+                <a href="#">
+                    <i class="fab fa-youtube" ></i>
+                </a>
             </div>
         </section>
  
     </div>
     
+    <div class="footer-links">
+        <div class="footer-container">
+            <h2 class="lugar" >location
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.791786251571!2d-76.25229742480678!3d-9.95127450643236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91a7c2bf9475f031%3A0x128d8e1f7bfb07e!2sOvalo%20de%20Cayhuayna%20Hu%C3%A1nuco!5e0!3m2!1ses-419!2spe!4v1682228950338!5m2!1ses-419!2spe" width="700" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </h2>
+            <!-- <ul>
+                <li>
+                    <a href="#">
+                        <h3>title one</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>title one</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>title one</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>title one</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+                <li>
+                    <a href="">Blockchain</a>
+                </li>
+            </ul> -->
+        </div>
+    </div>
 </body>
 </html>
