--- a/Trabajo_pagina_web/Inicio.html
+++ b/Trabajo_pagina_web/Inicio.html
@@ -14,10 +14,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <div class="menu-btn">
+        <i class="fas fa-bars"></i>
+    </div>
+
     <div class="container">
         <nav class="nav_main">
            <img src="Img/Fotito_1.jpg" alt="Mi fotito" class="nav-brand">
-        <ul class="nav-menu">
+        <ul class="nav-menu show " >
             <li>
                 <a href="#">Inicio</a>
             </li>
