empezando con JavaScript

--- a/Trabajo_pagina_web/Inicio.html
+++ b/Trabajo_pagina_web/Inicio.html
@@ -22,7 +22,7 @@
     <div class="container">
         <nav class="nav_main">
            <img src="Img/Fotito_1.jpg" alt="Mi fotito" class="nav-brand">
-        <ul class="nav-menu show " >
+        <ul class="nav-menu" >
             <li>
                 <a href="#">Inicio</a>
             </li>
@@ -226,5 +226,7 @@
             </ul> -->
         </div>
     </div>
+
+    <script src="inicio.js"></script>
 </body>
 </html>
