ya terminando el diseño de la pagina web, hare mejoras agregando historias y mas links

--- a/Trabajo_pagina_web/Inicio.html
+++ b/Trabajo_pagina_web/Inicio.html
@@ -11,6 +11,8 @@
     <!-- FONT OSWALD -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -226,7 +228,9 @@
             </ul> -->
         </div>
     </div>
-
+<!-- Scroll reveal -->
+<script src="https://unpkg.com/scrollreveal"></script>
+<!-- Custom JS -->
     <script src="inicio.js"></script>
 </body>
 </html>
