dando mis datos, historia, planes, etc y creando un juego simple

--- a/Trabajo_pagina_web/Inicio.html
+++ b/Trabajo_pagina_web/Inicio.html
@@ -26,7 +26,7 @@
            <img src="Img/Fotito_1.jpg" alt="Mi fotito" class="nav-brand">
         <ul class="nav-menu" >
             <li>
-                <a href="#">Inicio</a>
+                <a href="juego-simple.html">Juego simple</a>
             </li>
             <li>
                 <a href="#">Login</a>
@@ -58,61 +58,75 @@
         <!-- imagen principal del sitio-->
 
         <header class="showcase">
-            <h2>Atter Mayer Basilio Rengifo</h2>
-            <p>Hola, soy un chico tranquilo de b Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, aspernatur aliquam, recusandae impedit soluta minima harum quas a nemo voluptatum suscipit delectus beatae distinctio voluptatem nulla dicta, doloribus nostrum id!</p>
-            <a href="#" class="btn" >Leer mas <i class="fas fa-angle-double-right" ></i> </a>
+            <h2>Datos personales</h2>
+            <p>Mi nombre es Atter Mayer Basilio Rengifo tengo 17 años, naci en huànuco en el año 2005</p>
+            <a href="https://www.peru.travel/pe/destinos/huanuco" target="_blank" class="btn" >Huànuco <i class="fas fa-angle-double-right" ></i> </a>
         </header>
 
         <div class="news-cards">
             <div>
-                <img src="Img/fondo1.jpg" alt="">
-                <h3>Lorem ipsum dolor </h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis possimus minima porro quas libero veniam molestias doloribus quaerat maxime non! Reprehenderit et pariatur, culpa nam maxime consequatur. Magni, eaque veritatis?</p>
-                <a href="#">Aprende mas <i class="fas fa-angle-double-right" ></i> </a>
+                <img src="Img/Imagen-sotware.png" alt="">
+                <h3>Acerca de mi</h3>
+                <p>Soy estudiante del centro de estudio <strong>Senati</strong> cuento con 2 años de estudio y me siento muy feliz 
+                porque estoy aprendiendo muy rapido y estudiando la carrera de mis sueños.</p>
+                <a href="https://admisionsenati.com/" target="_blank" >Senati <i class="fas fa-angle-double-right" ></i> </a>
             </div>
             <div>
-                <img src="Img/fondo2.jpg" alt="">
-                <h3>Lorem ipsum dolor </h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis possimus minima porro quas libero veniam molestias doloribus quaerat maxime non! Reprehenderit et pariatur, culpa nam maxime consequatur. Magni, eaque veritatis?</p>
-                <a href="#">Aprende mas <i class="fas fa-angle-double-right" ></i> </a>
+                <img src="Img/fondito-pc.jpg" alt="">
+                <h3>Experiencia </h3>
+            <p> <strong>Python:</strong> 80%<br>
+                <strong>Java:</strong> 80%<br> 
+                <strong>Html:</strong> 100%<br>
+                <strong>CSS:</strong>  100% <br>
+                <strong>JavaScript:</strong> 50% <br>   
+                <strong>PHP:</strong> 40%</p>
+                <a href="https://concepto.de/programacion/" target="_blank" >Programacion <i class="fas fa-angle-double-right" ></i> </a>
             </div>
             <div>
-                <img src="Img/fondo3.jpg" alt="">
-                <h3>Lorem ipsum dolor </h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis possimus minima porro quas libero veniam molestias doloribus quaerat maxime non! Reprehenderit et pariatur, culpa nam maxime consequatur. Magni, eaque veritatis?</p>
-                <a href="#">Aprende mas <i class="fas fa-angle-double-right" ></i> </a>
+                <img src="Img/comida2.jpg" alt="">
+                <h3>Gustos</h3>
+                <strong>Platos favoritos: </strong>   <p>Aji de gallina, papa a la huancaina, pachamanca, pollo con mani. <br>
+                <strong>Tipo de musica: </strong> <br> Balada, Regueton, pop ingles,etc.    </p>
+
+                <a href="https://www.lima2019.pe/magazine/10-platos-peruanos-que-no-puedes-perderte" target="_blank" >Aprende mas <i class="fas fa-angle-double-right" ></i> </a>
             </div>
             <div>
                 <img src="Img/fondo4.jpg" alt="">
-                <h3>Lorem ipsum dolor </h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis possimus minima porro quas libero veniam molestias doloribus quaerat maxime non! Reprehenderit et pariatur, culpa nam maxime consequatur. Magni, eaque veritatis?</p>
-                <a href="#">Aprende mas <i class="fas fa-angle-double-right" ></i> </a>
+                <h3>Experencia laboral: </h3>
+                <p>Trabaje con mi tio que es un inginiero de planos que hace titulos, entonces trabaja ayudandole medir terrenos y sacar planos a personas usando AutoCad. <br>
+                Trabaje como carpintero pero solo pude un mes porque sufro de la espalda ;( 
+                
+                </p>
+                <a href="https://concepto.de/agronomia/" target="_blank" >Aprende mas <i class="fas fa-angle-double-right" ></i> </a>
             </div>
 
         </div>
 
          <section class="cards-banner-one">
             <div class="content">
-                <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore numquam quisquam provident fugit eos nihil, doloremque incidunt excepturi rerum! Blanditiis necessitatibus dicta laborum libero corrupti facere distinctio nesciunt natus dignissimos.</p>
-                <a href="#" class="btn">lee mas <i class="fas fa-angle-double-right" ></i> </a> 
+                <h2>Metas</h2>
+                <p>Mi meta es especializarme en paginas web completo tanto sea backend y frontend, quizas no sea la mejor pagina esto, pero no lo estoy haciendo con youtube(como otros). <br> 
+                Empezare dando sotwaer a tiendas, reustaurantes, hoteles, etc, eso es mi meta de este año aprender a como de lugar dar sotwaer a pequeñas empresas.
+                Otra meta que tengo pensada es estudiar y aprender hablar ingles para tener un mejor trabajo laboral.
+                </p>
+                <a href="https://descubrecomunicacion.com/que-es-backend-y-frontend/" target="_blank" class="btn">Backend y frontend <i class="fas fa-angle-double-right" ></i> </a> 
 
             </div>
         </section>
 
         <section class="social" >
-            <p>Follow techNews</p>
+            <p>Redes sociales</p>
             <div class="links">
-                <a href="#">
+                <a href="https://es-la.facebook.com/" target="_blank" >
                     <i class="fab fa-facebook-f" ></i>
                 </a>
-                <a href="#">
+                <a href="https://twitter.com/login" target="_blank" >
                     <i class="fab fa-twitter" ></i>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/" target="_blank" >
                     <i class="fab fa-linkedin" ></i>
                 </a>
-                <a href="#">
+                <a href="https://www.youtube.com/watch?v=ApXoWvfEYVU" target="blank" >
                     <i class="fab fa-youtube" ></i>
                 </a>
             </div>
