ya terminando el proyecto, agregando algunos juegos, fotos 4k, todo empieza desde (formulario)

--- a/Trabajo_pagina_web/Inicio.html
+++ b/Trabajo_pagina_web/Inicio.html
@@ -26,23 +26,15 @@
            <img src="Img/Fotito_1.jpg" alt="Mi fotito" class="nav-brand">
         <ul class="nav-menu" >
             <li>
-                <a href="juego-simple.html">Juego simple</a>
+                <a href="juego-simple.html">Juego De adivinanza simple</a>
             </li>
             <li>
-                <a href="#">Login</a>
+                <a href="juego2.html">Juego de adivinza avanzado </a>
             </li>
             <li>
-                <a href="#">Crear cuenta</a>
+                <a href="Formulario.html">Cerrar secion</a>
             </li>
-            <li>
-                <a href="#">Estudios</a>
-            </li>
-            <li>
-                <a href="#">Juego</a>
-            </li>
-            <li>
-                <a href="#">Terminos y condiciones</a>
-            </li>
+            
         </ul> 
         <ul class="nav_menu">
             <li>
@@ -109,7 +101,7 @@
                 Empezare dando sotwaer a tiendas, reustaurantes, hoteles, etc, eso es mi meta de este año aprender a como de lugar dar sotwaer a pequeñas empresas.
                 Otra meta que tengo pensada es estudiar y aprender hablar ingles para tener un mejor trabajo laboral.
                 </p>
-                <a href="https://descubrecomunicacion.com/que-es-backend-y-frontend/" target="_blank" class="btn">Backend y frontend <i class="fas fa-angle-double-right" ></i> </a> 
+                <a href="https://descubrecomunicacion.com/que-es-backend-y-frontend/" target="_blank" class="btn">Backend y frontend <i class="fas fa-angle-double-right"></i> </a> 
 
             </div>
         </section>
